# LMCP

./: .gitignore  CLIENT_GUIDE.md  CONTRIBUTING.md  DEV_ENVIRONMENT.txt  EXAMPLES.md  INSTALLATION_FIX.md  LICENSE  LMCP_ARTICLE.md  PUBLISH_TO_PYPI.md  PYTHON_API.md  QUICKSTART.md  README.md  SERVER_DISCOVERY.md  WINDOWS_TROUBLESHOOTING.md  check_server.py  debug_mcp.py  debug_model_dump.py  debug_protocol_tools.py  debug_server.py  debug_server_config.py  debug_stdio.py  debug_tools.py  get_started.py  install_local.py  my_tools_server.py  pyproject.toml  setup_env.py  simple_test.py  stdio_mcp_server.py  test_cli_issue.py  test_installation.py  test_list_tools.py  test_manual.py  test_proper_stdio.py  test_real_server.py  test_simple.py  test_stdio.py  test_with_logging.py  trace_server.py  trace_server2.py  (+1 more)
cleanup_test_dir/: moved_test.txt
examples/: README.md  advanced_server.py  basic_client.py  basic_server.py  middleware_example.py  real_world_clients.py
src/lmcp/: __init__.py  __main__.py  advanced.py  auto_discovery.py  cli.py  client.py  connection.py  discovery.py  exceptions.py  extended_registry.py  server.py  simple_client.py  types.py  verified_registry.py
src/lmcp/middleware/: __init__.py  auth.py  base.py  cache.py  logging.py  metrics.py  retry.py
src/lmcp/protocol/: __init__.py  client.py  messages.py  server.py
src/lmcp/transports/: __init__.py  base.py  http.py  stdio.py  websocket.py
src/lmcp/utils/: __init__.py  helpers.py  templates.py
test-lmcp-fresh/: test_api_server.py  test_calculator_server.py  test_final_server.py  test_fixed_server.py  test_resources_server.py  test_server_server.py  validation_test_server.py  working_test_server.py
tests/: __init__.py  conftest.py
tests/integration/: test_client_server.py
tests/unit/test_client/: test_client.py
tests/unit/test_middleware/: test_logging.py
tests/unit/test_server/: test_server.py
